# ai-agents

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/ai_agents/: cli.py  config.py
src/ai_agents/agents/: base.py  code_reviewer.py
tests/: test_base.py  test_code_reviewer.py  test_config.py
